--- a/source/stylesheets/products.scss
+++ b/source/stylesheets/products.scss
@@ -1,4 +1,8 @@
-
+body .products {
+    .map-966 {
+        margin-top: -150px;
+    }
+}
 .banner-text {
     margin-top: 20px;
     margin-bottom: 20px !important;
